--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -77,86 +77,107 @@
             </LinearLayout>
         </LinearLayout>
 
-        <!-- Equipment grid: 3 x 4 -->
-        <GridLayout
-            android:id="@+id/gridEquipment"
+        <!-- ====== DIAMOND EQUIPMENT USING 3 COLUMNS ====== -->
+        <LinearLayout
+            android:id="@+id/equipColumns"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:columnCount="3"
-            android:useDefaultMargins="false"
-            android:alignmentMode="alignMargins"
-            android:rowOrderPreserved="true"
+            android:orientation="horizontal"
+            android:gravity="center"
             android:paddingTop="@dimen/p_section_pad">
 
-            <!-- Row 1 -->
-            <ImageButton
-                android:id="@+id/slot_left_top"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size"
-                android:contentDescription="Trinket" />
-            <ImageButton
-                android:id="@+id/slot_helmet"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
-            <ImageButton
-                android:id="@+id/slot_cape"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
+            <!-- Column 1 (left) : WEAPON • GLOVES • BOW -->
+            <!-- Add top padding to shift down and form the diamond -->
+            <LinearLayout
+                android:id="@+id/colLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="32dp">
 
-            <!-- Row 2 -->
-            <ImageButton
-                android:id="@+id/slot_gloves"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
-            <ImageButton
-                android:id="@+id/slot_armor"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
-            <ImageButton
-                android:id="@+id/slot_shield"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
+                <ImageButton
+                    android:id="@+id/slot_weapon"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
 
-            <!-- Row 3 -->
-            <ImageButton
-                android:id="@+id/slot_bow"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
-            <ImageButton
-                android:id="@+id/slot_pants"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
-            <ImageButton
-                android:id="@+id/slot_ring1"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
+                <ImageButton
+                    android:id="@+id/slot_gloves"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
 
-            <!-- Row 4 -->
-            <ImageButton
-                android:id="@+id/slot_weapon"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
-            <ImageButton
-                android:id="@+id/slot_boots"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
-            <ImageButton
-                android:id="@+id/slot_ring2"
-                style="@style/SlotButton"
-                android:layout_width="@dimen/slot_size"
-                android:layout_height="@dimen/slot_size" />
-        </GridLayout>
+                <ImageButton
+                    android:id="@+id/slot_bow"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
+            </LinearLayout>
+
+            <!-- Column 2 (center) : HELMET • ARMOR • PANTS • BOOTS -->
+            <LinearLayout
+                android:id="@+id/colCenter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+                <ImageButton
+                    android:id="@+id/slot_helmet"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
+
+                <ImageButton
+                    android:id="@+id/slot_armor"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
+
+                <ImageButton
+                    android:id="@+id/slot_pants"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
+
+                <ImageButton
+                    android:id="@+id/slot_boots"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
+            </LinearLayout>
+
+            <!-- Column 3 (right) : CAPE • SHIELD • RING -->
+            <!-- Same top padding as left for symmetry -->
+            <LinearLayout
+                android:id="@+id/colRight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="32dp">
+
+                <ImageButton
+                    android:id="@+id/slot_cape"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
+
+                <ImageButton
+                    android:id="@+id/slot_shield"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
+
+                <!-- One ring only -->
+                <ImageButton
+                    android:id="@+id/slot_ring"
+                    style="@style/SlotButton"
+                    android:layout_width="@dimen/slot_size"
+                    android:layout_height="@dimen/slot_size" />
+            </LinearLayout>
+
+        </LinearLayout>
+        <!-- ====== /DIAMOND EQUIPMENT USING 3 COLUMNS ====== -->
 
         <!-- Small potions button row -->
         <LinearLayout
@@ -246,47 +267,6 @@
                     android:textColor="@color/green_text"
                     android:layout_marginStart="6dp"/>
             </LinearLayout>
-        </LinearLayout>
-
-        <!-- Bottom action bar -->
-        <LinearLayout
-            android:id="@+id/bottomBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingTop="@dimen/p_section_pad">
-
-            <ImageButton
-                android:id="@+id/btnCombat"
-                style="@style/BottomIcon"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/bottom_icon_size"
-                android:layout_weight="1" />
-            <ImageButton
-                android:id="@+id/btnCharacter"
-                style="@style/BottomIcon"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/bottom_icon_size"
-                android:layout_weight="1" />
-            <ImageButton
-                android:id="@+id/btnStats"
-                style="@style/BottomIcon"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/bottom_icon_size"
-                android:layout_weight="1" />
-            <ImageButton
-                android:id="@+id/btnInventory"
-                style="@style/BottomIcon"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/bottom_icon_size"
-                android:layout_weight="1" />
-            <ImageButton
-                android:id="@+id/btnSettings"
-                style="@style/BottomIcon"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/bottom_icon_size"
-                android:layout_weight="1" />
         </LinearLayout>
 
     </LinearLayout>
