--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/nav_battle">
 
-    <!-- Existing destinations (ensure the class names/paths match your project) -->
     <fragment
         android:id="@+id/nav_battle"
         android:name="com.example.akthosidle.ui.BattleFragment"
@@ -23,18 +23,15 @@
         android:label="Inventory"
         tools:layout="@layout/fragment_inventory" />
 
-    <!-- NEW: Skills -->
     <fragment
         android:id="@+id/nav_skills"
         android:name="com.example.akthosidle.ui.SkillsFragment"
         android:label="Skills"
         tools:layout="@layout/fragment_skills" />
 
-    <!-- NEW: Settings -->
     <fragment
         android:id="@+id/nav_settings"
         android:name="com.example.akthosidle.ui.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings" />
-
 </navigation>
