--- a/app/src/main/res/layout/fragment_battle.xml
+++ b/app/src/main/res/layout/fragment_battle.xml
@@ -147,7 +147,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="12dp"
             android:contentDescription="monster"
-            android:src="@drawable/ic_monster_placeholder"/>
+            android:src="@drawable/ic_shield"/>
 
         <!-- Loot panel -->
         <LinearLayout
@@ -156,7 +156,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="16dp"
-            android:background="@drawable/bg_chip_dark"
+            android:background="@drawable/slot_background"
             android:padding="12dp">
 
             <TextView
