--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,4 +34,10 @@
         android:name="com.example.akthosidle.ui.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings" />
+
+    <fragment
+        android:id="@+id/buyGoldFragment"
+        android:name="com.example.akthosidle.ui.store.BuyGoldFragment"
+        android:label="@string/buy_gold_title"
+        tools:layout="@layout/fragment_buy_gold" />
 </navigation>
