--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.AkthosIdle" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+<resources>
+    <style name="Theme.AkthosIdle" parent="Theme.Material3.DayNight.NoActionBar" />
 
-    <style name="Theme.AkthosIdle" parent="Base.Theme.AkthosIdle" />
+    <!-- Fallback for API < 31 -->
+    <style name="Theme.AkthosIdle.Splash" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowBackground">@color/black</item>
+    </style>
 </resources>
